# DiffusionDPO

./: pyproject.toml  requirements.txt
launchers/: sd15.sh
src/diffusion_dpo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diffusion_dpo/diffusion/: tooling.py
src/diffusion_dpo/text_encoder/: model.py
src/diffusion_dpo/trainer/: accelerator.py  components.py  train.py  trainer_args.py
